# TelegramBot

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  run.sh
src/: CMakeLists.txt  TelegramBot.cpp  TelegramBot.h  main.cpp
